[package]
name = "austins_pokemon_rng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand="2.1.0"
rayon = "1.10.0"
atomic-counter = "1.0.1"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rand_isaac = "0.3.0"

#[features]
#fastrand = ["std"]
